--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
-    "react-hot-loader": "^1.3.1"
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0"
   }
 }
