--- a/package.json
+++ b/package.json
@@ -23,18 +23,27 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "css-loader": "^0.28.4",
     "express": "^4.15.3",
+    "file-loader": "^0.11.2",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0"
   },
   "dependencies": {
+    "connect-timeout": "^1.9.0",
+    "prop-types": "^15.5.10",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0"
